--- a/src/views/activity_view.ejs
+++ b/src/views/activity_view.ejs
@@ -46,7 +46,7 @@
                             <div class="sm:col-span-4">
                                 <label class="block text-sm font-semibold text-white">Abteilung</label>
                                 <div class="mt-2 text-gray-200">
-                                    <%= activity.departmant || '' %>
+                                    <%= activity.department || '' %>
                                 </div>
                             </div>
                         </div>
